# uml-mcp

./: .coverage  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  CONTRIBUTING.md  Dockerfile  FALLBACK_IMPLEMENTATION.md  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  fastmcp.json  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  smithery-config-schema.json  smithery.yaml  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cd.yml  ci.yml  deploy.yml  docs.yml  test.yml  (+1 more)
.skill/: agents.md  claude.md
.well-known/: ai-plugin.json  plugin-manifest.json  privacy.txt
D2/: run_d2.py
ai_uml/: requirements.txt
api/: app.py
config/: README.md  cursor_config.json
docs/: configuration.md  diagram-assistant.md  examples.md  fallback-mechanism.md  index.md  installation.md  llms.txt  testing.md  user-manual.md
evaluations/: uml_mcp_eval.xml
examples/: README.md  banking-class.puml  example-actdiag.txt  example-activity.puml  example-blockdiag.txt  example-bpmn.bpmn  example-bytefield.txt  example-c4plantuml.puml  example-class.puml  example-component.puml  example-d2.d2  example-dbml.dbml  example-deployment.puml  example-ditaa.txt  example-erd.erd  example-excalidraw.json  example-graphviz.dot  example-mermaid.mmd  example-nomnoml.txt  example-nwdiag.txt  example-object.puml  example-packetdiag.txt  example-pikchr.txt  example-plantuml.puml  example-sequence.puml  example-state.puml  example-structurizr.dsl  example-svgbob.txt  example-symbolator.txt  example-tikz-3d.tex  example-tikz-automata.tex  example-tikz-block.tex  example-tikz-circuit.tex  example-tikz-flowchart.tex  example-tikz-graph.tex  example-tikz-math.tex  example-tikz-mindmap.tex  example-tikz-tree.tex  example-tikz.tex  example-usecase.puml  (+8 more)
kroki/: __init__.py  kroki.py  kroki_templates.py
mcp_core/: __init__.py
mermaid/: mermaid.py
scripts/: evaluation.py  generate_server_card.py
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_core_utils.py  test_diagram_prompts.py  test_diagram_resources.py  test_diagram_tools.py  test_docs_generator.py  test_fallback_mechanism.py  test_fastmcp_wrapper.py  test_kroki.py  test_mermaid.py  test_read_only.py  test_server.py  test_server_bootstrap.py  test_tikz.py  test_tool_decorator.py
tools/: __init__.py
(+68 files in other folders)
