[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "uml-mcp"
version = "1.2.0"
requires-python = ">=3.10"

[tool.poetry]
name = "uml-mcp"
version = "1.2.0"
description = "UML diagram generation server with MCP interface"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/uml-mcp"
packages = [
    { include = "mcp_core" },
    { include = "kroki" },
    { include = "mermaid" },
    { include = "plantuml" },
    { include = "D2" },
    { include = "ai_uml" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic = "^2.3.0"
rich = "^14.0.0"
httpx = "^0.28.0"
typer = "^0.9.0"
python-multipart = "^0.0.22"
python-dotenv = "^1.0.0"
starlette = "^0.52.0"
jinja2 = "^3.1.2"
aiofiles = "^23.2.1"
requests = "^2.28.0"
python-dateutil = "^2.8.2"
# Add diagram-related dependencies
graphviz = "^0.20.1"
pillow = "^10.1.0"
# If fastmcp is not your own module but a dependency
fastmcp = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pre-commit = "^4.0.0"
ruff = ">=0.8.0"
ty = ">=0.0.14"
pytest-asyncio = "^0.21.1"
black = ">=23.0.0"
flake8 = ">=7.0.0"
isort = ">=5.12.0"

[tool.poetry.scripts]
# Official MCP server CLI (single entrypoint; server.py delegates here)
uml-mcp = "mcp_core.core.server:main"
mcp-server = "mcp_core.core.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"
addopts = "--cov=mcp_core --cov=kroki --cov-report=term --cov-report=html"

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [".venv", "build", "dist", "ai_uml"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["mcp_core", "kroki"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.14",
    "pytest-asyncio>=0.21.1",
    "black>=23.0.0",
    "flake8>=7.0.0",
    "isort>=5.12.0",
]
